Updated Dockerfile and conf files

--- a/pom.xml
+++ b/pom.xml
@@ -348,6 +348,11 @@
         </dependency>
         <!--TODO: Remove this after bumping to new Spring Parent with safe log4j and logback -->
         <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>6.4</version>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
