Updating QA account settings

--- a/conf/app-settings.yaml
+++ b/conf/app-settings.yaml
@@ -5,11 +5,11 @@ accounts:
       price-granularity: low
     privacy:
       ccpa:
-        enabled: true
+        enabled: false
       gdpr:
-        enabled: true
+        enabled: false
     cookie-sync:
       default-limit: 8
       max-limit: 15
       coop-sync:
-        default: true
+        default: false
