--- a/src/main/resources/bidder-config/generic.yaml
+++ b/src/main/resources/bidder-config/generic.yaml
@@ -47,7 +47,7 @@ adapters:
             uid-macro: '$AUID'
       nativo:
         enabled: true
-        endpoint: https://qa.jadserve.postrelease.com/esi?ntv_epid=7
+        endpoint: http://localhost:8085/esi?ntv_epid=7
         pbs-enforces-ccpa: false
         meta-info:
           maintainer-email: prebiddev@nativo.com
